manifests/apps/headlamp/overlays/home/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames:
  - "headlamp.ucdialplans.com"
